--- a/css/styles.css
+++ b/css/styles.css
@@ -393,9 +393,7 @@ header {
 }
 
 .pdfAudio {
-    padding: 15px 0px 15px 0px;
-    border-bottom: 1px solid gray;
-    border-top: 1px solid gray;
+    padding: 15px 0px 15px 0px
 }
 
 .pdfAudio a {
