--- a/css/keyframes.css
+++ b/css/keyframes.css
@@ -1,41 +1,46 @@
 @keyframes fonteMudaCor {
     0% {
-        text-shadow: 2px 3px 1px rgb(49, 218, 15);
-        box-shadow: 0px 0px 2px 4px rgb(49, 218, 15);
+        color: rgb(255, 255, 255);
+        text-shadow: 1px 1px 2px rgb(78, 78, 78);
+        border: 1px solid rgb(156, 156, 156);
     }
     25% {
-        text-shadow: 2px 3px 1px rgb(6, 124, 25);
-        box-shadow: 0px 0px 2px 4px rgb(6, 124, 25);
+        color: rgb(141, 141, 141);
+        text-shadow: 1.5px 1.5px 2px rgb(190, 190, 190);
+        border: 1.5px solid rgb(65, 65, 65);
     }
     50% {
-        text-shadow: 2px 3px 1px rgb(1, 61, 16);
-        box-shadow: 0px 0px 2px 4px rgb(1, 61, 16);
+        color: rgb(255, 255, 255);
+        text-shadow: 1px 1px 2px rgb(78, 78, 78);
+        border: 2px solid rgb(156, 156, 156);
     }
     75% {
-        text-shadow: 2px 3px 1px rgb(6, 124, 25);
-        box-shadow: 0px 0px 2px 4px rgb(6, 124, 25);
+        color: rgb(141, 141, 141);
+        text-shadow: 1.5px 1.5px 2px rgb(190, 190, 190);
+        border: 1.5px solid rgb(65, 65, 65);
     }
     100% {
-        text-shadow: 2px 3px 1px rgb(49, 218, 15);
-        box-shadow: 0px 0px 2px 4px rgb(49, 218, 15);
+        color: rgb(255, 255, 255);
+        text-shadow: 1px 1px 2px rgb(78, 78, 78);
+        border: 1px solid rgb(156, 156, 156);
     }
 }
 
-@keyframes borderMudaCor {
+@keyframes bordaMudaCor {
     0% {
-        box-shadow: 3px 3px 2px 4px rgb(49, 218, 15);
+        border: 0.5px solid rgb(156, 156, 156);
     }
     25% {
-        box-shadow: 3px 3px 2px 4px rgb(6, 124, 25);
+        border: 1px solid rgb(65, 65, 65);
     }
     50% {
-        box-shadow: 3px 3px 2px 4px rgb(1, 61, 16);
+        border: 1.5px solid rgb(156, 156, 156);
     }
     75% {
-        box-shadow: 3px 3px 2px 4px rgb(6, 124, 25);
+        border: 1px solid rgb(65, 65, 65);
     }
     100% {
-        box-shadow: 3px 3px 2px 4px rgb(49, 218, 15);
+        border: 0.5px solid rgb(156, 156, 156);
     }
 }
 
