--- a/css/especial.css
+++ b/css/especial.css
@@ -13,6 +13,7 @@ input[type="button"],
     background-image: linear-gradient(rgb(12, 12, 12), rgb(95, 95, 95));
     margin: 10px;
     animation: fonteMudaCor 5s linear infinite;
+    outline: none;
 }
 
 input[type="button"]:active,
@@ -23,4 +24,8 @@ input[type="button"]:active,
     box-shadow: none;
     transition: 0.01s;
     outline: none;
+    background-image: linear-gradient(rgb(12, 12, 12), rgb(41, 41, 41));
+    color: #b3b3b3;
+    font-weight: bold;
+    font-size: 14px;
 }
