--- a/css/keyframes.css
+++ b/css/keyframes.css
@@ -47,18 +47,21 @@
 @keyframes fontPiscando {
     0% {
         opacity: 1;
+        color: white;
     }
     25% {
         opacity: 0;
     }
     50% {
         opacity: 1;
+        color: white;
     }
     75% {
         opacity: 0;
     }
     100% {
         opacity: 1;
+        color: white;
     }
 }
 
