--- a/css/styles.css
+++ b/css/styles.css
@@ -428,3 +428,10 @@ header {
     animation-delay: 3s;
     color: black;
 }
+
+.container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: initial;
+}
