--- a/css/styles.css
+++ b/css/styles.css
@@ -374,13 +374,11 @@ header {
 .pdfAudio {
     padding: 15px 15px 15px 15px;
     margin: 8px;
-    border: 2px solid limegreen;
 }
 
 .pdfAudio a {
     text-decoration: none;
     font-size: 10px;
-    color: rgb(15, 240, 27);
 }
 
 .pdfAudio label {
@@ -422,10 +420,13 @@ header {
 .container {
     display: flex;
     flex-direction: column;
-    border: 2px solid white;
+    justify-content: center;
+    align-items: center;
 }
 
 .linhaPdf {
     display: flex;
     flex-direction: row;
+    justify-content: center;
+    align-items: center;
 }
