--- a/css/styles.css
+++ b/css/styles.css
@@ -420,7 +420,7 @@ header {
 .container {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: start;
     align-items: center;
 }
 
