--- a/css/styles.css
+++ b/css/styles.css
@@ -335,8 +335,7 @@ header {
 }
 
 .palavrasAudio {
-    border-bottom: 1px solid gray;
-    border-top: 1px solid gray;
+    border-bottom: 1px dotted gray;
 }
 
 .palavrasAudio button {
